Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122172

Manual testing - tst_barstest crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 Beta3, 6.8.0 FF
    • 6.8.0 FF
    • Graphs: 3D
    • None
    • Windows
    • fbfd40391 (dev), d2e7a738e (6.7)

    Description

      In the manual test tst_barstest, the application crashes if you left-click "Test primary series" 6 times. The fault lies in step 5 of the "primary series" test, "Remove nonexistent series".

       

      Steps to reproduce:

      Left-click "Test primary series" 6 times. The application output will show step 0 up to step 5, and the application will crash at step 5 of this primary series test.

       

      Expected behavior:

      Removal of a nonexistent series should not result in a crash.

       

      Observed behavior:

      Removal of a nonexistent series results in a crash during step 5 of the "primary series" test in tst_barstest.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            oulu_hillbilly Sami Varanka
            chrisrl Chris Lerner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes