Don't try to remove non-existent series

Fixes: QTBUG-122172
Change-Id: I8912d31ab83465013ee70df9220240ee20eba083
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit fbfd4039103c2e3437d43724be1e7ca69ca5a0a6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>